--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8669ed2
+	base = d8ceaee
 	trimbase = 
 	parent = debian/turbulent/depthimage_to_laserscan
-	previous = 
+	previous = 8669ed2
