--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/depthimage_to_laserscan
-	previous = 
-	base = 31f928e
+	previous = 31f928e
+	base = 8225300
 	trim = 
 	trimbase = 
