--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/depthimage_to_laserscan
-	previous = 
-	base = 907c96d
+	previous = 907c96d
+	base = f47caf3
 	trim = 
 	trimbase = 
