--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/depthimage_to_laserscan
-	previous = 
-	base = 8439e45
+	previous = 8439e45
+	base = 9b6b739
 	trim = 
 	trimbase = 
