--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/depthimage_to_laserscan
-	previous = 
-	base = 5cdc780
+	previous = 5cdc780
+	base = 5b02467
 	trim = 
 	trimbase = 
