--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/depthimage_to_laserscan
-	previous = 
-	base = 8e2a538
+	previous = 8e2a538
+	base = 5ed8ecd
 	trim = 
 	trimbase = 
