--- a/tracks.yaml
+++ b/tracks.yaml
@@ -197,7 +197,8 @@ tracks:
     ros_distro: humble
     vcs_type: git
     vcs_uri: https://github.com/ros-perception/depthimage_to_laserscan.git
-    version: :{auto}
+    version: 2.5.0
+    version_saved: :{auto}
   r2b2:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
