--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.5.0-2": ["Tue Feb 08 2022", "Chris Lalancette", "clalancette@openrobotics.org"]}
+{"2.5.0-3": ["Tue Apr 19 2022", "Chris Lalancette", "clalancette@openrobotics.org"], "2.5.0-2": ["Tue Feb 08 2022", "Chris Lalancette", "clalancette@openrobotics.org"]}
